Remove unused string reversal classes and implement array rotation without temporary array